# MiniSOA

./: CMakeLists.txt  README.md
include/parser/: fileParser.hpp
include/subscription-tree/: subscriptionTree.hpp  treeWrapper.hpp
src/: main.cpp
src/parser/: fileParser.cpp
src/subscription-tree/: subscriptionTree.cpp  treeWrapper.cpp
